[FIX] crm: fix priority stars alignment
Better aligns the stars with the label when no expected deadline is set,
by styling the parent div to space out non-empty children.

Task-2709761

closes odoo/odoo#80984

--- a/addons/crm/static/src/scss/crm.scss
+++ b/addons/crm/static/src/scss/crm.scss
@@ -1,3 +1,11 @@
+.o_lead_opportunity_form {
+    // Used to add spacing between fields when placed inline without having
+    // empty fields take extra space.
+    div.o_lead_opportunity_form_inline_fields > :not(.o_field_empty) {
+        margin-right: 1.5em;
+    }
+}
+
 .o_opportunity_kanban {
     .ribbon {
         &::before, &::after {
